vlib/v/checker/tests/ambiguous_function_call.vv
fn foo1(foo1 int) {
	foo1(foo1 + 1)
}

fn foo2() {
	foo2 := 1
	foo2(foo2)
}

fn main() {
	foo1(5)
	foo2()
}
